code review, fix typos and ide suggestions