@@ -5,55 +5,55 @@ import java.util.stream.Collectors;
 
 public class SimulationResultSummary {
 
-	private final String _simulationType;
-	
-	private final Long _attackerWonRounds;
-	private final Long _systemWonRounds;
-	private final Long _unambiguousRounds;
-	
-	private final Double _attackSuccessProbability;
-	
-	public SimulationResultSummary(
-			String simulationType,
-			Long attackerWonRounds,
-			Long systemWonRounds,
-			Long unambiguousRounds,
-			Double attackSuccessProbability) {
-		_simulationType = simulationType;
-		_attackerWonRounds = attackerWonRounds;
-		_systemWonRounds = systemWonRounds;
-		_unambiguousRounds = unambiguousRounds;
-		_attackSuccessProbability = attackSuccessProbability;
-	}
-	
-	public String getSimulationType() {
-		return _simulationType;
-	}
-	
-	// Serialize object to a text file
-    public String serializeToText(){
-    	StringBuilder sb = new StringBuilder();
-		sb.append("SimulationType: " + _simulationType);
-		sb.append(System.lineSeparator());
-		if (getAttackerWonRounds() != null) {
-			sb.append("AttackerWonRounds: " + getAttackerWonRounds());
-			sb.append(System.lineSeparator());
-		}
-		if (getSystemWonRounds() != null) {
-			sb.append("SystemWonRounds: " + getSystemWonRounds());
-			sb.append(System.lineSeparator());
-		}
-		if (getUnambiguousRounds() != null) {
-			sb.append("UnambiguousRounds: " + getUnambiguousRounds());
-			sb.append(System.lineSeparator());
-		}
-		
-		if (getAttackSuccessProbability() != null) {
-			sb.append("AttackSuccessProbability: " + String.format(Locale.US, "%.20f", getAttackSuccessProbability()));
-			sb.append(System.lineSeparator());
-		}
+    private final String _simulationType;
 
-		return sb.toString();
+    private final Long _attackerWonRounds;
+    private final Long _systemWonRounds;
+    private final Long _unambiguousRounds;
+
+    private final Double _attackSuccessProbability;
+
+    public SimulationResultSummary(
+            String simulationType,
+            Long attackerWonRounds,
+            Long systemWonRounds,
+            Long unambiguousRounds,
+            Double attackSuccessProbability) {
+        _simulationType = simulationType;
+        _attackerWonRounds = attackerWonRounds;
+        _systemWonRounds = systemWonRounds;
+        _unambiguousRounds = unambiguousRounds;
+        _attackSuccessProbability = attackSuccessProbability;
+    }
+
+    public String getSimulationType() {
+        return _simulationType;
+    }
+
+    // Serialize object to a text file
+    public String serializeToText() {
+        StringBuilder sb = new StringBuilder();
+        sb.append("SimulationType: " + _simulationType);
+        sb.append(System.lineSeparator());
+        if (getAttackerWonRounds() != null) {
+            sb.append("AttackerWonRounds: " + getAttackerWonRounds());
+            sb.append(System.lineSeparator());
+        }
+        if (getSystemWonRounds() != null) {
+            sb.append("SystemWonRounds: " + getSystemWonRounds());
+            sb.append(System.lineSeparator());
+        }
+        if (getUnambiguousRounds() != null) {
+            sb.append("UnambiguousRounds: " + getUnambiguousRounds());
+            sb.append(System.lineSeparator());
+        }
+
+        if (getAttackSuccessProbability() != null) {
+            sb.append("AttackSuccessProbability: " + String.format(Locale.US, "%.20f", getAttackSuccessProbability()));
+            sb.append(System.lineSeparator());
+        }
+
+        return sb.toString();
     }
 
     // Deserialize object from a text file
@@ -63,11 +63,11 @@ public class SimulationResultSummary {
         Long systemWonRounds = null;
         Long unambiguousRounds = null;
         Double attackSuccessProbability = null;
-        
-        for (String line : serializedSummary.lines().collect(Collectors.toList())) {
-        	String[] parts = line.split(": ", 2);
+
+        for (String line : serializedSummary.lines().toList()) {
+            String[] parts = line.split(": ", 2);
             if (parts.length != 2) continue; // Skip malformed lines
-            
+
             switch (parts[0]) {
                 case "SimulationType":
                     simulationType = parts[1];
@@ -89,19 +89,19 @@ public class SimulationResultSummary {
         return new SimulationResultSummary(simulationType, attackerWonRounds, systemWonRounds, unambiguousRounds, attackSuccessProbability);
     }
 
-	public Long getAttackerWonRounds() {
-		return _attackerWonRounds;
-	}
+    public Long getAttackerWonRounds() {
+        return _attackerWonRounds;
+    }
 
-	public Long getSystemWonRounds() {
-		return _systemWonRounds;
-	}
+    public Long getSystemWonRounds() {
+        return _systemWonRounds;
+    }
 
-	public Long getUnambiguousRounds() {
-		return _unambiguousRounds;
-	}
+    public Long getUnambiguousRounds() {
+        return _unambiguousRounds;
+    }
 
-	public Double getAttackSuccessProbability() {
-		return _attackSuccessProbability;
-	}
+    public Double getAttackSuccessProbability() {
+        return _attackSuccessProbability;
+    }
 }
